# Thai-ASR-Comparative-Benchmarking

./: .gitignore  DrawGraphs.py  LICENSE  README.md  main.py  pyproject.toml
datasets/: data.py
models/: NemoAsrNvidia.py  TyphoonAsr.py  espnetConfomer.py  squeezeCTC.py
utils/: CheckCompatibilities.py  logger.py
